--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,21 @@ section {
 	background: transparent url("../img/mars-pano.jpg") no-repeat center top;
 	background-size: cover;	
 }
+
+.dipper{
+	width: 200px;
+	opacity:0;
+}
+
+.js-dipper-fade{
+-webkit-animation: dipper-fade 1s linear forwards;	
+}
+
+@-webkit-keyframes dipper-fade {
+	0%{
+		opactity:0;
+	}
+	100%{
+		opacity:1;
+	}
+}
