--- a/css/main.css
+++ b/css/main.css
@@ -40,3 +40,27 @@ section {
 		opacity:1;
 	}
 }
+
+.shuttle{
+	width: 200px;
+	opacity:0;
+}
+
+.shuttle-section{
+	background-color:#F6a500;
+}
+
+@-webkit-keyframes shuttle-fade {
+	0%{
+		opactity:0;
+		margin-top:0;
+	}
+	100%{
+		opacity:1;
+		margin-top:-5em;
+	}
+}
+
+.js-shuttle-fade{
+-webkit-animation: shuttle-fade 300ms linear forwards;	
+}
